# MiniRedis

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
include/: database.hpp
src/: database.cpp  main.cpp
tests/: basic_tests.cpp
